# mlbuild

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  benchmark_test_result.json  builds.csv  mlbuild_report_6f5cfb33_20260305_103414.html  mlbuild_report_6f5cfb33_20260305_110719.html  mlbuild_report_e67a6a87_20260301_155600.html  mlbuild_report_e67a6a87_20260301_155847.html  project_structure.txt  pyproject.toml
.github/workflows/: mlbuild.yml  model-performance-ci.yml
.github/workflows/examples/: quickstart.yml
.mlbuild/: .gitignore  registry.db  remotes.yaml
docs/: .gitignore  README.md  REMOTE_STORAGE.md  ci.md
src/mlbuild/: __init__.py
src/mlbuild/backends/: __init__.py  base.py  registry.py
src/mlbuild/backends/coreml/: __init__.py  backend.py  deep_profiler.py  exporter.py
src/mlbuild/backends/onnxruntime/: __init__.py  backend.py  benchmark_runner.py
src/mlbuild/backends/tflite/: __init__.py  backend.py  benchmark_runner.py  converter.py  deep_profiler.py
src/mlbuild/benchmark/: device_runner.py  runner.py
src/mlbuild/cli/: __init__.py  main.py
src/mlbuild/cli/commands/: __init__.py  accuracy.py  baseline.py  benchmark.py  budget.py  build.py  ci.py  cloud_push.py  compare.py  compare_compute_units.py  compare_quantization.py  config_cmd.py  convert.py  diff.py  doctor.py  experiment.py  explore.py  export.py  history.py  import_cmd.py  inspect.py  log.py  login.py  optimize.py  pin.py  profile.py  projects.py  prune.py  pull.py  push.py  remote.py  rename.py  report.py  run.py  search.py  status.py  sync.py  tag.py  upgrade.py  validate.py
src/mlbuild/cli/formatters/: export.py  inspect.py  utils.py
src/mlbuild/cloud/: sync.py
src/mlbuild/convert/: cache.py  coreml.py  detector.py  feature_compat.py  graph.py  pytorch.py  service.py  tensorflow.py  types.py  validator.py
src/mlbuild/core/: __init__.py  accuracy.py  budget.py  calibration.py  device.py  diff_utils.py  environment.py  errors.py  format_detection.py  hash.py  hash_utils.py  ir.py  machine.py  task_detection.py  task_inputs.py  task_validation.py  tasks.py  types.py  validation.py
src/mlbuild/core/accuracy/: calibration.py  checker.py  config.py  inputs.py  metrics.py
src/mlbuild/core/ci/: reporter.py  runner.py  thresholds.py
src/mlbuild/experiments/: __init__.py  active_run.py  experiment.py  manager.py  registry.py
src/mlbuild/explore/: explorer.py
src/mlbuild/loaders/: __init__.py  loader.py  onnx_loader.py
src/mlbuild/models/: build_view.py
src/mlbuild/optimize/: optimizer.py
src/mlbuild/optimize/backends/: coreml_backend.py  tflite_backend.py
src/mlbuild/optimize/passes/: pruning.py  quantization.py
src/mlbuild/profiling/: __init__.py  cold_start.py  layer_profiler.py  memory_profiler.py  warmup_analyzer.py
src/mlbuild/registry/: __init__.py  local.py  schema.py
src/mlbuild/storage/: __init__.py  backend.py  config.py  local.py  s3.py
src/mlbuild/validation/: accuracy_validator.py
src/mlbuild/visualization/: __init__.py  charts.py
tests/: conftest.py  generate_fixtures.py  generate_fixtures_step10.py  generate_fixtures_step11.py  generate_fixtures_step2.py  generate_fixtures_step3.py  generate_fixtures_step4.py  generate_fixtures_step5.py  generate_fixtures_step6.py  generate_fixtures_step7.py  generate_fixtures_step8.py  generate_fixtures_step9.py  test_artifact_hash.py  test_benchmark.py  test_normalization.py
tests/integration/: test_build.py  test_failures.py
tests/unit/: test_accuracy.py  test_detection.py  test_inputs.py  test_validation.py
