[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MLBuild"
version = "0.2.0"
description = "Performance CI/CD for on-device ML models — catch inference regressions before they ship"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Abdoulaye Seydi", email = "abdoulayeaseydi@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    # CLI + display
    "click>=8.1.0",
    "rich>=13.0.0",

    # Core ML
    "numpy>=1.24.0,<2.0",
    "onnx>=1.12.0,<1.19.0",

    # System metrics
    "psutil>=5.9.0",

    # Config + version
    "PyYAML>=6.0",
    "packaging>=23.0",

]

[project.optional-dependencies]

# CoreML backend — macOS only (Apple Silicon, A-series)
coreml = [
    "coremltools>=7.0",
    "onnx2torch>=1.5.0",
    "torch>=2.0.0",
]

# TFLite backend — works on macOS and Linux (Android/mobile deployment)
tflite = [
    "tensorflow>=2.15.0,<2.18.0",
    "onnx2tf==1.28.8",
    "onnxsim==0.4.30",
    "sng4onnx>=2.0.1",
    "onnx-graphsurgeon>=0.3.27",
    "ai-edge-litert>=1.0.0",
]

# S3-compatible remote storage (AWS S3, Cloudflare R2, Backblaze B2)
s3 = [
    "boto3>=1.26.0",
]

# PDF report export
pdf = [
    "weasyprint>=60.0",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "boto3>=1.26.0",
]

# macOS full stack
macos = [
    "coremltools>=7.0",
    "onnx2torch>=1.5.0",
    "torch>=2.0.0",
    "tensorflow>=2.15.0,<2.18.0",
    "onnx2tf==1.28.8",
    "onnxsim==0.4.30",
    "sng4onnx>=2.0.1",
    "onnx-graphsurgeon>=0.3.27",
    "ai-edge-litert>=1.0.0",
    "boto3>=1.26.0",
    "weasyprint>=60.0",
]

# Linux / CI (TFLite only, no CoreML)
linux = [
    "tensorflow>=2.15.0,<2.18.0",
    "onnx2tf==1.28.8",
    "onnxsim==0.4.30",
    "sng4onnx>=2.0.1",
    "onnx-graphsurgeon>=0.3.27",
    "ai-edge-litert>=1.0.0",
    "boto3>=1.26.0",
]

[project.scripts]
mlbuild = "mlbuild.cli.main:cli"

[project.urls]
Homepage = "https://github.com/AbdoulayeSeydi/mlbuild"
Repository = "https://github.com/AbdoulayeSeydi/mlbuild.git"
Documentation = "https://github.com/AbdoulayeSeydi/mlbuild/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
